Updated Index and .css
Added individual divs for each square. Updated the .css to style these differently and help scale the gameboard depending on the size of the window.

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,27 +46,116 @@ body {
 .mainScreen {
   background-color: green;
   text-align: center;
-  width: 600px;
+  width: 80%;
+  height: 80%;
+  z-index: 1;
   margin-left: 10%;
   position: fixed;
     top: 100px;
+    float: left;
 }
 
 .player1Score {
   background-color: blue;
-  width: 100px;
+  width: 15.5%;
+  height: 92%;
   float: left;
+  margin: 1.5%;
+  z-index: 2;
 }
 
-.gameBoard {
+.gameBoardSpace {
   background-color: yellow;
-  width: 200px;
+  width: 60%;
+  height: 92%;
   float: left;
+  margin: 1.5%;
+  z-index: 2;
+}
+
+#gameBoardMap {
+  height: 80%;
+  background-color: cyan;
+
 }
 
 .player2Score {
   background-color: teal;
-  width: 100px;
+  width: 15.5%;
+  height: 92%;
+  float: left;
+  margin: 1.5%;
+  z-index: 2;
+}
+
+.playerBoardText {
+/*
+  position: fixed;
+    top: 300px;
+*/}
+
+.squares {
+  height: 90%;
+  width: 29.333333%;
+  margin: 3%;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+  background-color: orange;
+  font-size: 100px;
+  text-align: center;
+  /*vertical-align: middle;*/
+}
+
+.colOne {
+  float: left;
+  width: 100%;
+  /*height: 33.333333%;*/
+  background-color: black;
+}
+
+.colOne > div {
   float: left;
 }
 
+.colOne > #sqOne {
+  margin-left: 3%;
+}
+
+.colTwo {
+  float: left;
+  width: 100%;
+  /*height: 33.333333%;*/
+  background-color: grey;
+}
+
+.colTwo > div {
+  float: left;
+}
+
+.colTwo > #sqFour {
+  margin-left: 3%;
+}
+
+.colThree {
+  float: left;
+  width: 100%;
+  /*height: 33.333333%;*/
+  background-color: black;
+}
+
+.colThree > div {
+  float: left;
+}
+
+.colThree > #sqSeven {
+  margin-left: 3%;
+}
+/*#sqOne {
+  background-color: orange;
+  float: left;
+}*/
+/*
+#sqTwo {
+  background-color: beige;
+  float: left;
+}*/
