--- a/styles/style.css
+++ b/styles/style.css
@@ -39,8 +39,14 @@ body {
 }
 
 .logo {
-  background-image: url("images/face.jpg");
-  width: 200px;
+  width: 50px;
+  height: 50px;
+  padding: 7.5px;
+}
+
+.logo > img {
+  width: 100%;
+  height: 100%;
 }
 
 .mainScreen {
@@ -94,7 +100,7 @@ body {
     top: 300px;
 */}
 
-.squares {
+.square {
   height: 90%;
   width: 29.333333%;
   margin: 3%;
