--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,7 @@ body {
   position: fixed;
     top: 100px;
   float: left;
+  overflow-y: hidden;
 }
 
 .player1Score {
@@ -123,7 +124,7 @@ body {
   float: left;
 }
 
-.colOne > #sqOne {
+.colOne > [id='0'] {
   margin-left: 3%;
 }
 
@@ -131,14 +132,14 @@ body {
   float: left;
   width: 100%;
   /*height: 33.333333%;*/
-  background-color: grey;
+  background-color: black;
 }
 
 .colTwo > div {
   float: left;
 }
 
-.colTwo > #sqFour {
+.colTwo > [id='3'] {
   margin-left: 3%;
 }
 
@@ -153,7 +154,7 @@ body {
   float: left;
 }
 
-.colThree > #sqSeven {
+.colThree > [id='6'] {
   margin-left: 3%;
 }
 /*#sqOne {
