--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,32 @@
+/*color scheme: https://color.adobe.com/UCLA-color-theme-6474787/edit/?copy=true&base=2&rule=Custom&selected=2&name=Copy%20of%20UCLA&mode=cmyk&rgbvalues=0.09999999999999998,0.52,1,1,0.78,0.17000000000000004,0,0.07200000000000006,0.264,1,1,1,0,0,0&swatchOrder=0,1,2,3,4*/
 body {
   margin: 0px;
   padding: 0px;
   background-color: #0971B2;
   background-size: cover;
+}
+
+.btn {
+  background: #FFE32B;
+  background-image: -webkit-linear-gradient(top, #FFE32B, #FFE32B);
+  background-image: -moz-linear-gradient(top, #FFE32B, #FFE32B);
+  background-image: -ms-linear-gradient(top, #FFE32B, #FFE32B);
+  background-image: -o-linear-gradient(top, #FFE32B, #FFE32B);
+  background-image: linear-gradient(to bottom, #FFE32B, #FFE32B);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #000000;
+  font-size: 20px;
+  padding: 4px 6px 4px 6px;
+  text-decoration: none;
+  /*height: 22px;*/
+}
+
+.btn:hover {
+  background: #0971B2;
+  text-decoration: none;
 }
 
 .navbar {
@@ -19,22 +43,48 @@ body {
 .navItems {
   position: fixed;
     top: 20px;
-    margin-left: 20%;
-    margin-right: 20%;
+    left: 70px;
+
   font-size: 20px;
   font-family: veranda;
-  font-style: veranda;
   background-color: black;
-  width: 50%;
-  text-align: center;
+  width: 100%;
+  float: left;
+}
 
+#email {
+  margin-right: 10px;
+  font-size: 15px;
+  font-family: veranda;
+}
+
+#password {
+  font-size: 15px;
+  font-family: veranda;
+}
+
+#login {
+}
+
+#credentials {
+  margin-right: 20px;
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */
+    color: black;
 }
 
 .navItems > span {
-  margin-left: 2%;
-  margin-right: 2%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 1%;
   padding: 5px;
-  background-color: black;
+  color: black;
+  border-radius: 5px;
+  background-color: #FFE32B;
+
+
+  height: 22px;
 }
 
 .logo {
@@ -42,6 +92,8 @@ body {
   height: 50px;
   padding: 7.5px;
 }
+
+
 
 .logo > img {
   width: 100%;
@@ -174,6 +226,65 @@ body {
 
 .colThree > [id='6'] {
   margin-left: 3%;
+}
+
+.actionCenter {
+  display: none;
+}
+
+@media (max-width: 941px) {
+  #title{
+    display: none;
+  }
+}
+
+@media (max-width: 690px){
+  #title{
+    display: none;
+  }
+  #password{
+    display: none;
+  }
+
+@media (max-width: 575px){
+  #title{
+    display: none;
+  }
+  #password{
+    display: none;
+  }
+  #email{
+    display: none;
+  }
+  #credentials{
+    display: none;
+  }
+  .mainScreen{
+    width: 500px;
+    margin-top: 2px;
+    margin-left: 2px;
+  }
+  /*.navbar{
+    position: fixed;
+    width: 1000px;
+    background-color: red;
+  }
+  .navitems{
+    position: fixed;
+    width: 1000px;
+  }*/
+
+  /*.player1Score
+  {
+    display: none;
+  }
+  .player2Score
+  {
+    display: none;
+  }
+  .colOne {
+    width: 200px;
+  }*/
 }
 /*#sqOne {
   background-color: orange;
