--- a/styles/style.css
+++ b/styles/style.css
@@ -115,7 +115,7 @@ body {
 
 .actionCenter {
   position: fixed;
-  top: 75px;
+    top: 75px;
   margin-left: 10px;
 }
 
@@ -139,7 +139,7 @@ body {
 }
 
 #gameBoardMap {
-  height: 80%;
+  height: 90%;
   background-color: #FFC72B;
   font-size: 25px;
   margin-top: 0px;
@@ -186,7 +186,8 @@ body {
 .colOne {
   float: left;
   width: 100%;
-  /*height: 33.333333%;*/
+  /*height: 32%;
+  height: 33.333333%;*/
   background-color: black;
 }
 
@@ -201,7 +202,8 @@ body {
 .colTwo {
   float: left;
   width: 100%;
-  /*height: 33.333333%;*/
+  /*height: 32%;
+  height: 33.333333%;*/
   background-color: black;
 }
 
@@ -216,7 +218,8 @@ body {
 .colThree {
   float: left;
   width: 100%;
-  /*height: 33.333333%;*/
+  /*height: 32%;
+  height: 33.333333%;*/
   background-color: black;
 }
 
